# nchainz

./: .gitignore  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: flake8.yml  pytest.yml  tox.yml
nchainz/: __init__.py  __main__.py
nchainz/tests/: test_example.py
