[tool.poetry]
name = "nchainz"
version = "0.1.0"
description = "Like 2 Chainz but better!"
authors = ["Lars Quentin <lars@lquenti.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
